--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,18 @@
 {
-    "name": "Expression Calculator",
+    "name": "",
     "icons": [
         {
-            "src": "/android-chrome-192x192.png?v=YAo3rv7AX0",
+            "src": "/android-chrome-192x192.png?v=1",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/android-chrome-384x384.png?v=YAo3rv7AX0",
+            "src": "/android-chrome-384x384.png?v=1",
             "sizes": "384x384",
             "type": "image/png"
         }
     ],
-    "theme_color": "#ffffff",
-    "background_color": "#ffffff",
+    "theme_color": "#000000",
+    "background_color": "#000000",
     "display": "standalone"
 }
